--- a/src/sass/elements/_helpers.scss
+++ b/src/sass/elements/_helpers.scss
@@ -12,20 +12,16 @@
 
 .padding-top {
   padding-top: 100px;
-}
-
-.flex {
-  display: flex;
-}
-
-.divider {
-  background: rgba(42, 47, 80, 0.8);
-  height: 2px;
-  width: 100%;
-  margin-bottom: 100px;
 
   @include max-screen(768px) {
-    margin-bottom: 50px;
+    padding-top: 50px;
   }
 }
 
+.padding-bottom {
+  padding-bottom: 100px;
+
+  @include max-screen(768px) {
+    padding-bottom: 50px;
+  }
+}
