Update main styles
Include some basic styles for some of the common WordPress blocks as well some custom blocks. Tidied up some of the variables and included some new ones

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -2,8 +2,31 @@
   background: $footer-background;
   width: 100%;
   padding: 40px 0;
+  color: $footer-text;
 
-  p, h2, h3 {
+  p, h2, h3, h4, a {
     color: $footer-text;
+  }
+
+  &__inner {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  &__col {
+    width: 25%;
+
+    @include max-screen(767px) {
+      width: 100%;
+      margin-bottom: $spacing*4;
+    }
+  }
+
+  &__bottom {
+    background: rgba(0,0,0,0.9);
+
+    p {
+      font-size: 0.875rem;
+    }
   }
 }
