--- a/src/sass/settings/_variables.scss
+++ b/src/sass/settings/_variables.scss
@@ -1,14 +1,22 @@
+
+// Breakpoints
+
 $menu-mobile-breakpoint: 1024px;
 
-/* Fonts */
-$base-font-size:        18px;
-$base-line-height:      22px;
+// Fonts
+
+$base-font-size:        16px;
+$base-line-height:      24px;
 $letter-spacing:        0.5px;
 
-/* Other */
+// Other
 
 $base-radius:       2px;
 
-/* Transitions */
+// Transitions
 
 $transition-time:   0.3s;
+
+// Spacing
+
+$spacing: 8px;
