--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -1,9 +1,5 @@
-ul.menu {
-  list-style-type: none;
-  margin: 0;
-  display: flex;
-  flex-wrap: wrap;
-  float: right;
+.main-menu {
+  @include flex-vertical-center;
 
   @include max-screen($menu-mobile-breakpoint) {
     opacity: 0;
@@ -15,7 +11,7 @@ ul.menu {
     right: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0,0.9);
+    background: rgba(0, 0, 0, 0.9);
     z-index: 100;
     transition: 0.2s;
     flex-direction: column;
@@ -27,32 +23,45 @@ ul.menu {
     pointer-events: all;
   }
 
-  li {
-    margin: 0 20px;
-    @include flex-vertical-center;
+  ul.menu {
+    list-style-type: none;
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
 
     @include max-screen($menu-mobile-breakpoint) {
       display: block;
-      margin: 0;
+      width: 100%;
+      float: none;
     }
 
-    a {
-      font-size: 1rem;
-      font-weight: 400;
-      display: block;
-      color: $menu-link;
-      text-decoration: none;
-      position: relative;
-
-      @include link-hover {
-        color: $menu-link-hover;
-        transition: $transition-time;
-      }
+    li {
+      margin: 0 20px;
+      @include flex-vertical-center;
 
       @include max-screen($menu-mobile-breakpoint) {
-        color: $white;
-        padding: 10px 0;
-        font-size: 1.5rem;
+        display: block;
+        margin: 0;
+      }
+
+      a {
+        font-size: 1rem;
+        font-weight: 400;
+        display: block;
+        color: $menu-link;
+        text-decoration: none;
+        position: relative;
+
+        @include link-hover {
+          color: $menu-link-hover;
+          transition: $transition-time;
+        }
+
+        @include max-screen($menu-mobile-breakpoint) {
+          color: $white;
+          padding: 10px 0;
+          font-size: 1.5rem;
+        }
       }
     }
   }
