--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,13 @@
 
 @import "generic/reset";
 
+@import "fontawesome/fontawesome";
+@import "fontawesome/brands";
+@import "fontawesome/solid";
+@import "fontawesome/light";
+@import "fontawesome/v4-shims";
+@import "fontawesome/regular";
+
 @import "elements/page";
 @import "elements/typography";
 @import "elements/links";
