--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,6 +13,9 @@
 @import "fontawesome/light";
 @import "fontawesome/v4-shims";
 @import "fontawesome/regular";
+@import "fontawesome/sharp-solid";
+@import "fontawesome/thin";
+@import "fontawesome/duotone";
 
 @import "elements/page";
 @import "elements/typography";
