--- a/src/sass/_trumps.generic.scss
+++ b/src/sass/_trumps.generic.scss
@@ -18,3 +18,41 @@
   position: absolute;
   width: 1px;
 }
+
+.desktop-hidden {
+  display: none;
+  @include max-screen(1023px) {
+    display: inline-block;
+  }
+}
+
+.mobile-hidden {
+  display: block;
+  @include max-screen(1023px) {
+    display: none;
+  }
+}
+
+.padding-both {
+  padding: 100px 0;
+
+  @include max-screen(768px) {
+    padding: 50px 0;
+  }
+}
+
+.padding-top {
+  padding-top: 100px;
+
+  @include max-screen(768px) {
+    padding-top: 50px;
+  }
+}
+
+.padding-bottom {
+  padding-bottom: 100px;
+
+  @include max-screen(768px) {
+    padding-bottom: 50px;
+  }
+}
