Add FAQs block & CPT

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -28,6 +28,7 @@
 @import "elements/helpers";
 @import "elements/thumbnail";
 @import "elements/browserupgrade";
+@import "elements/accordion";
 
 @import "plugins/slick-theme";
 @import "plugins/slick";
